--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "js-sha512": "^0.8.0",
     "pg": "^8.7.1"
   },
   "devDependencies": {
